<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/browser_fivestar_dialog_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/article_rating_star_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="—"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/browser_five_star_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/update_title"
                    android:textColor="@color/browser_title_color"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="—"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/update_tips1"
                    android:textColor="@color/five_star_btn_color_high"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="22dp"
                    android:gravity="center_horizontal"
                    android:text="@string/update_content1"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/update_content2"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/update_content3"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="22dp"
                    android:gravity="center_horizontal"
                    android:text="@string/update_tips2"
                    android:textColor="@color/browser_title_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/star_negative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:text="@string/update_later"
                    android:textColor="@color/browser_tips_color"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/star_positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:background="@drawable/browser_update_position_bg"
                    android:gravity="center"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingEnd="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/update_now"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dialog_button_size"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/settings_title_divider" />

            <LinearLayout
                android:id="@+id/googleplay_icon"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:padding="6dp"
                    android:src="@drawable/browser_google_play" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Google Play"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/ahlib_common_tabbar_color_normal_new"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>