<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:id="@+id/popwindow_update"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/browser_pop_menu_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/history_icon_left"
                android:text="@string/modify"
                android:textColor="@color/browser_title_color"
                android:textSize="@dimen/context_menu_dialog_text_size"
                android:textStyle="bold"
                android:paddingLeft="@dimen/history_icon_left"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popwindow_add_homepage"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/browser_pop_menu_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/history_icon_left"
                android:text="@string/add_to_homepage"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/browser_title_color"
                android:textSize="@dimen/context_menu_dialog_text_size"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popwindow_add_desktop"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/browser_pop_menu_bg"
            android:visibility="gone"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/history_icon_left"
                android:text="@string/add_to_desktop"
                android:textColor="@color/browser_title_color"
                android:textSize="@dimen/context_menu_dialog_text_size"
                android:textStyle="bold"
                android:paddingLeft="@dimen/history_icon_left" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/popwindow_delete"
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/browser_pop_menu_bg"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/history_icon_left"
                android:text="@string/delete"
                android:textStyle="bold"
                android:textColor="@color/browser_title_color"
                android:textSize="@dimen/context_menu_dialog_text_size"
                android:paddingLeft="@dimen/history_icon_left" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>